[package]
name = "ash-bot"
version = "0.0.1"
authors = ["moparisthebest <admin@moparisthebest.com>"]

description = "Markov chains XMPP bot."
repository  = "https://code.moparisthebest.com/moparisthebest/ash"
keywords    = ["xmpp", "bot", "markov", "chains", "ai"]

license = "AGPL-3.0-or-later"
readme = "README.md"

edition = "2021"

include = [
    "**/*.rs",
    "Cargo.toml",
    "*.md",
    "ash.toml",
]

[dependencies]
futures = "0.3"
toml = "0.5"
serde_derive = "1.0"
serde = { version = "1.0", features = ["derive"] }
dirs = "4.0.0"
tokio-xmpp = { version = "3.2.0", default-features = false, features = ["tls-rust"] }
tokio = { version = "1", features = ["net", "rt", "rt-multi-thread", "macros", "io-util", "io-std"] }
xmpp-parsers = "0.19"
die = "0.2.0"
anyhow = "1.0"
env_logger = "0.9"
rusqlite = { version = "0.28.0", features = ["bundled"] }
rustkov = { git = "https://github.com/moparisthebest/Rustkov" }

[[bin]]
name = "ash"
path = "src/main.rs"

[profile.release]
strip = true
